feat: init chat
